crates/cli/tests/snapshots/status_snapshots__status_change_not_found.snap
---
source: crates/cli/tests/status_snapshots.rs
expression: "pretty(&String::from_utf8(out.stdout).unwrap())"
---
{
  "data": null,
  "error": {
    "code": "change.not_found",
    "details": {},
    "message": "provider error: change 'missing' not found"
  },
  "ok": false,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
